// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomMenu /> allows to send on valid values 1`] = `
<DocumentFragment>
  .c3 {
  padding: 17px;
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  color: #fff;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  user-select: none;
}

.c4 {
  background: transparent;
  color: #fff;
  border: none;
  font-size: 14px;
  font-weight: 400;
  flex: 1;
}

.c4:focus {
  outline: none;
}

.c4::placeholder {
  color: #838383;
}

.c2 {
  font-size: 15px;
  font-weight: 700;
  margin-bottom: 24px;
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 24px;
}

.c5 {
  opacity: 0.2;
  background: linear-gradient(270deg, rgba(217, 217, 217, 0.00) 0%, #D9D9D9 50.52%, rgba(217, 217, 217, 0.00) 100%);
  height: 1px;
  width: 100%;
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c7 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c8 {
  font-size: 15px;
  font-weight: 700;
  word-break: break-word;
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c6 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c6:hover {
  background: rgba(217, 217, 217, 0.2);
}

.c11 {
  font-size: 14px;
  font-weight: 400;
}

.c14 {
  font-size: 15px;
  font-weight: 700;
  padding: 15px 45px;
  border: none;
  border-radius: 100px;
  background: #D9D9D9;
  color: #1D1D1D;
  transition: all 0.2s ease-in-out;
  margin-bottom: 15px;
  width: 100%;
  cursor: pointer;
}

.c14:hover {
  opacity: 0.7;
}

.c14:active {
  opacity: 0.4;
}

.c14:focus {
  outline: none;
}

.c0 {
  width: 100%;
  max-height: calc(100vh - 240px);
  overflow: hidden;
  min-height: 100%;
  padding-bottom: 150px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c0::-webkit-scrollbar {
  display: none;
}

.c13 {
  position: absolute;
  bottom: 0;
  padding: 34px 17px 22px;
  left: 0;
  width: 100%;
  background: linear-gradient(180deg, rgba(16, 16, 16, 0.00) 0%, rgba(16, 16, 16, 0.90) 52.08%);
}

.c12 {
  padding: 0 17px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  margin-top: 14px;
  color: rgba(255, 255, 255, 0.3);
  user-select: none;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Choose recipient
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          placeholder="To: name, address"
          type="text"
          value="0x7F30B1960D5556929B03a0339814fE903c55a347"
        />
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Choose token
      </label>
      <div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <p
              class="c8"
            >
              tk2
            </p>
            <p
              class="c9"
            >
              0 TK2
            </p>
          </div>
          <div
            class="c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Enter amount
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          placeholder="0.00"
          type="text"
          value="1.234"
        />
        <p
          class="c11"
        >
          TK2
        </p>
      </div>
      <div
        class="c12"
      >
        <p
          class="c11"
        >
          0.00 left
        </p>
      </div>
    </div>
    <div
      class="c13"
    >
      <button
        class="c14"
      >
        Send
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BottomMenu /> renders correctly 1`] = `
<DocumentFragment>
  .c3 {
  padding: 17px;
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  color: #fff;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  user-select: none;
}

.c4 {
  background: transparent;
  color: #fff;
  border: none;
  font-size: 14px;
  font-weight: 400;
  flex: 1;
}

.c4:focus {
  outline: none;
}

.c4::placeholder {
  color: #838383;
}

.c2 {
  font-size: 15px;
  font-weight: 700;
  margin-bottom: 24px;
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 24px;
}

.c5 {
  opacity: 0.2;
  background: linear-gradient(270deg, rgba(217, 217, 217, 0.00) 0%, #D9D9D9 50.52%, rgba(217, 217, 217, 0.00) 100%);
  height: 1px;
  width: 100%;
}

.c8 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c7 {
  width: 42px;
}

.c9 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c10 {
  font-size: 15px;
  font-weight: 700;
  word-break: break-word;
}

.c11 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c6 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c6:hover {
  background: rgba(217, 217, 217, 0.2);
}

.c12 {
  font-size: 14px;
  font-weight: 400;
}

.c15 {
  font-size: 15px;
  font-weight: 700;
  padding: 15px 45px;
  border: none;
  border-radius: 100px;
  background: #63626B;
  color: #1D1D1D;
  transition: all 0.2s ease-in-out;
  margin-bottom: 15px;
  width: 100%;
}

.c15:focus {
  outline: none;
}

.c0 {
  width: 100%;
  max-height: calc(100vh - 240px);
  overflow: hidden;
  min-height: 100%;
  padding-bottom: 150px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c0::-webkit-scrollbar {
  display: none;
}

.c14 {
  position: absolute;
  bottom: 0;
  padding: 34px 17px 22px;
  left: 0;
  width: 100%;
  background: linear-gradient(180deg, rgba(16, 16, 16, 0.00) 0%, rgba(16, 16, 16, 0.90) 52.08%);
}

.c13 {
  padding: 0 17px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  margin-top: 14px;
  color: rgba(255, 255, 255, 0.3);
  user-select: none;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Choose recipient
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          placeholder="To: name, address"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Choose token
      </label>
      <div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <img
              alt="Ether"
              class="c8"
              src="https://public.etherspot.io/buidler/chain_logos/ethereum.png"
              title="Ether"
            />
          </div>
          <div
            class="c9"
          >
            <p
              class="c10"
            >
              Ether
            </p>
            <p
              class="c11"
            >
              0 ETH
            </p>
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c9"
          >
            <p
              class="c10"
            >
              tk1
            </p>
            <p
              class="c11"
            >
              0 TK1
            </p>
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c9"
          >
            <p
              class="c10"
            >
              tk2
            </p>
            <p
              class="c11"
            >
              0 TK2
            </p>
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c9"
          >
            <p
              class="c10"
            >
              tk3
            </p>
            <p
              class="c11"
            >
              0 TK3
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Enter amount
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          disabled=""
          placeholder="0.00"
          type="text"
          value=""
        />
        <p
          class="c12"
        />
      </div>
      <div
        class="c13"
      >
        <p
          class="c12"
        >
          0.00 left
        </p>
      </div>
    </div>
    <div
      class="c14"
    >
      <button
        class="c15"
        disabled=""
      >
        Send
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BottomMenu /> renders error on failed send 1`] = `
<DocumentFragment>
  .c3 {
  padding: 17px;
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  color: #fff;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  user-select: none;
}

.c4 {
  background: transparent;
  color: #fff;
  border: none;
  font-size: 14px;
  font-weight: 400;
  flex: 1;
}

.c4:focus {
  outline: none;
}

.c4::placeholder {
  color: #838383;
}

.c2 {
  font-size: 15px;
  font-weight: 700;
  margin-bottom: 24px;
}

.c1 {
  display: flex;
  flex-direction: column;
  margin-bottom: 24px;
}

.c5 {
  opacity: 0.2;
  background: linear-gradient(270deg, rgba(217, 217, 217, 0.00) 0%, #D9D9D9 50.52%, rgba(217, 217, 217, 0.00) 100%);
  height: 1px;
  width: 100%;
}

.c10 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c7 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c8 {
  font-size: 15px;
  font-weight: 700;
  word-break: break-word;
}

.c9 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c6 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c6:hover {
  background: rgba(217, 217, 217, 0.2);
}

.c11 {
  font-size: 14px;
  font-weight: 400;
}

.c15 {
  text-align: center;
  font-size: 12px;
}

.c14 {
  font-size: 15px;
  font-weight: 700;
  padding: 15px 45px;
  border: none;
  border-radius: 100px;
  background: #D9D9D9;
  color: #1D1D1D;
  transition: all 0.2s ease-in-out;
  margin-bottom: 15px;
  width: 100%;
  cursor: pointer;
}

.c14:hover {
  opacity: 0.7;
}

.c14:active {
  opacity: 0.4;
}

.c14:focus {
  outline: none;
}

.c0 {
  width: 100%;
  max-height: calc(100vh - 240px);
  overflow: hidden;
  min-height: 100%;
  padding-bottom: 150px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c0::-webkit-scrollbar {
  display: none;
}

.c13 {
  position: absolute;
  bottom: 0;
  padding: 34px 17px 22px;
  left: 0;
  width: 100%;
  background: linear-gradient(180deg, rgba(16, 16, 16, 0.00) 0%, rgba(16, 16, 16, 0.90) 52.08%);
}

.c12 {
  padding: 0 17px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-content: center;
  margin-top: 14px;
  color: rgba(255, 255, 255, 0.3);
  user-select: none;
  width: 100%;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Choose recipient
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          placeholder="To: name, address"
          type="text"
          value="0x7F30B1960D5556929B03a0339814fE903c55a347"
        />
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c5"
      />
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Choose token
      </label>
      <div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <p
              class="c8"
            >
              tk2
            </p>
            <p
              class="c9"
            >
              0 TK2
            </p>
          </div>
          <div
            class="c10"
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 256 256"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <label
        class="c2"
      >
        Enter amount
      </label>
      <div
        class="c3"
      >
        <input
          class="c4"
          placeholder="0.00"
          type="text"
          value="1.234"
        />
        <p
          class="c11"
        >
          TK2
        </p>
      </div>
      <div
        class="c12"
      >
        <p
          class="c11"
        >
          0.00 left
        </p>
      </div>
    </div>
    <div
      class="c13"
    >
      <button
        class="c14"
      >
        Send
      </button>
      <p
        class="c15"
      >
        Failed to send!
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BottomMenu /> renders message on successful send 1`] = `
<DocumentFragment>
  .c2 {
  text-align: center;
}

.c3 {
  font-size: 15px;
  font-weight: 700;
  padding: 15px 45px;
  border: none;
  border-radius: 100px;
  background: #D9D9D9;
  color: #1D1D1D;
  transition: all 0.2s ease-in-out;
  margin-bottom: 15px;
  cursor: pointer;
}

.c3:hover {
  opacity: 0.7;
}

.c3:active {
  opacity: 0.4;
}

.c3:focus {
  outline: none;
}

.c0 {
  width: 100%;
  max-height: calc(100vh - 240px);
  overflow: hidden;
  min-height: 100%;
  padding-bottom: 150px;
  overflow-y: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.c0::-webkit-scrollbar {
  display: none;
}

.c1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  padding-bottom: 0;
  gap: 20px;
}

<div
    class="c0 c1"
  >
    <p
      class="c2"
    >
      Sent!
    </p>
    <button
      class="c3"
    >
      Done
    </button>
  </div>
</DocumentFragment>
`;
